--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 :root{
   --color-black: #000;
   --color-white: #fff;
-  --color-blue: #0077b5;
+  --color-blue: #0a66c2;
   --color-gray-dark:#313335;
   --color-gray-medium:#86888a;
   --color-gray-light:#caccce;
@@ -23,9 +23,10 @@ html{
 body{
   color: var(--color-black);
   font-size: 1.4rem;
-  line-height: 1.7;
+  line-height: 1.6;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
+  background-color: #F3F2EF;
 }
 
 h1 , h2 , h3{
