--- a/css/styles.css
+++ b/css/styles.css
@@ -1,65 +1,78 @@
 /* Reset */
-*, *::before , *::after{
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 /* Root Variables */
-:root{
+:root {
   --color-black: #000;
   --color-white: #fff;
   --color-blue: #0a66c2;
-  --color-gray-dark:#313335;
-  --color-gray-medium:#86888a;
-  --color-gray-light:#caccce;
-  --color-body:#f3f2ef;
-  --color-border:#e0dfdc;
-  --border-radius:0.8rem;
+  --color-gray-dark: #313335;
+  --color-gray-medium: #86888a;
+  --color-gray-light: #caccce;
+  --color-body: #f3f2ef;
+  --color-border: #e0dfdc;
+  --border-radius: 0.8rem;
 }
 
 /* Typography */
-html{
+html {
   font-size: 62.5%;
 }
 
-body{
+body {
   color: var(--color-black);
   font-size: 1.4rem;
   line-height: 1.6;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   background-color: var(--color-body);
 }
 
-h1 , h2 , h3{
+h1,
+h2,
+h3 {
   color: var(--color-black);
   font-weight: 600;
 }
 
-h1{
+h1 {
   font-size: 2.4rem;
 }
 
-h2{
+h2 {
   font-size: 2rem;
 }
 
-h3{
+h3 {
   font-size: 1.6rem;
 }
 
 /* Container */
-.container{
+.container {
   max-width: 800px;
   /* background-color: #0a66c2; */
   margin: 0 auto;
 }
 
 /* Card */
-.card{
+.card {
   background-color: var(--color-white);
-  padding: 1.2rem 2.4rem;
+  padding: 2.4rem;
   border-radius: var(--border-radius);
   border: 1px solid var(--color-border);
+}
+
+/* About */
+.card__about h2 {
+  margin-bottom: 0.8rem;
+}
+
+.card__about p {
+  width: 60%;
 }
