--- a/css/styles.css
+++ b/css/styles.css
@@ -172,3 +172,33 @@ h3 {
 .license__item .license__img img {
   width: 100%;
 }
+
+/* Skill */
+.skill h2 {
+  margin-bottom: 1.3rem;
+}
+
+.skill .skill__item {
+  border-bottom: 1px solid var(--color-border);
+  padding: 1.2rem 0;
+}
+
+.skill .skill__item:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.skill__details p{
+  margin: 1.2rem 0.5rem;
+}
+
+.skill__details i.fa-clipboard-check{
+  color: var(--color-blue);
+  font-size: 2rem;
+  margin-right: 1rem;
+}
+
+.skill__details i.fa-user-group{
+  color: var(--color-gray-medium);
+  font-size: 2rem;
+  margin-right: 1rem;
+}
