--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --color-black: #000;
   --color-white: #fff;
   --color-blue: #0a66c2;
+  --color-blue-dark: #004182;
   --color-gray-dark: #313335;
   --color-gray-medium: #86888a;
   --color-gray-light: #caccce;
@@ -66,6 +67,143 @@ h3 {
   border-radius: var(--border-radius);
   border: 1px solid var(--color-border);
   margin-bottom: 0.8rem;
+}
+
+/* Intro */
+.card.intro {
+  padding: 0;
+  overflow: hidden;
+  margin-top: 1rem;
+}
+
+.intro .intro__header {
+  background: url("../assets/images/header.jpg") no-repeat center 25%;
+  background-size: cover;
+  height: 200px;
+  position: relative;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+.intro .intro__header .intro__img {
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  border: 4px solid var(--color-white);
+  overflow: hidden;
+  position: absolute;
+  top: 90px;
+  left: 30px;
+}
+
+.intro__header .intro__img img {
+  width: 100%;
+}
+
+.intro .intro__details {
+  padding: 5rem 2.4rem 2.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.intro__details .details__right {
+  margin-right: 4rem;
+}
+
+.intro__details .details__right a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 600;
+  color: var(--color-black);
+}
+
+.intro__details .details__right a:hover {
+  text-decoration: underline;
+  color: var(--color-blue);
+}
+
+.intro__details .details__right img {
+  width: 30px;
+  margin-right: 0.5rem;
+}
+
+.intro__details .details__left h3 {
+  font-weight: 400;
+}
+
+.intro__details .details__left p:nth-child(3) {
+  color: var(--color-gray-medium);
+  margin: 0.2rem 0;
+}
+
+.intro__details .details__left p:nth-child(4) {
+  font-weight: 600;
+  color: var(--color-blue);
+  margin: 0.2rem 0 1rem;
+}
+
+.intro__details .details__left .contactInfo {
+  font-weight: 600;
+  color: var(--color-blue);
+}
+
+.intro__details .details__left .contactInfo:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.intro__details .details__left .btn {
+  outline: 0;
+  padding: 0.8rem 2rem;
+  border-radius: 1.6rem;
+  margin: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.intro__details .details__left .btn--connect {
+  color: var(--color-white);
+  background-color: var(--color-blue);
+  border: none;
+}
+
+.btn--connect i.fa-user-plus {
+  margin-right: 0.5rem;
+}
+
+.intro__details .details__left .btn--connect:hover {
+  background-color: var(--color-blue-dark);
+}
+
+.intro__details .details__left .btn--msg {
+  color: var(--color-blue);
+  background-color: var(--color-white);
+  border: 1.5px solid var(--color-blue);
+}
+
+.btn--msg i.fa-lock {
+  margin-right: 0.5rem;
+}
+
+.intro__details .details__left .btn--msg:hover {
+  border-width: 2px;
+  background-color: rgba(10, 102, 194, 0.2);
+  margin: 0.45rem;
+}
+
+.intro__details .details__left .btn--more {
+  color: var(--color-gray-medium);
+  background-color: var(--color-white);
+  border: 1.5px solid var(--color-gray-medium);
+}
+
+.intro__details .details__left .btn--more:hover {
+  border-width: 2px;
+  background-color: rgba(234, 234, 234, 0.8);
+  margin: 0.45rem;
 }
 
 /* About */
@@ -187,17 +325,17 @@ h3 {
   border-bottom: none;
   padding-bottom: 0;
 }
-.skill__details p{
+.skill__details p {
   margin: 1.2rem 0.5rem;
 }
 
-.skill__details i.fa-clipboard-check{
+.skill__details i.fa-clipboard-check {
   color: var(--color-blue);
   font-size: 2rem;
   margin-right: 1rem;
 }
 
-.skill__details i.fa-user-group{
+.skill__details i.fa-user-group {
   color: var(--color-gray-medium);
   font-size: 2rem;
   margin-right: 1rem;
