--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,6 @@ h3 {
 .card.intro {
   padding: 0;
   overflow: hidden;
-  margin-top: 1rem;
 }
 
 .intro .intro__header {
@@ -204,6 +203,86 @@ h3 {
   border-width: 2px;
   background-color: rgba(234, 234, 234, 0.8);
   margin: 0.45rem;
+}
+
+/* Modal */
+.modalContainer {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+}
+
+.modalContainer.open{
+  display: flex;
+}
+
+.modal {
+  width: 500px;
+  height: 100%;
+  background-color: var(--color-white);
+  border-radius: var(--border-radius);
+}
+
+.modal .modal__header{
+  padding: 1rem 1.5rem;
+  border-bottom: 1px solid var(--color-border);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 2rem;
+}
+
+.modal__header span{
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3.5rem;
+  color: var(--color-gray-dark);
+  transition: background-color 0.3s ease;
+}
+
+.modal__header span:hover{
+  cursor: pointer;
+  background-color: var(--color-gray-light);
+}
+
+.modal .modal__details{
+  padding: 1rem 1.5rem;
+}
+
+.modal__details .modal__title{
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.modal__details .modal__item{
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 1.5rem;
+}
+
+.modal__details .modal__item i{
+  color: var(--color-gray-medium);
+  margin-right: 1.5rem;
+  font-size: 1.8rem;
+}
+
+.modal__details .modal__item a{
+  text-decoration: none;
+  color: var(--color-blue);
+  font-weight: 600;
+}
+
+.modal__details .modal__item a:hover{
+  text-decoration: underline;
 }
 
 /* About */
