--- a/css/styles.css
+++ b/css/styles.css
@@ -419,3 +419,22 @@ h3 {
   font-size: 2rem;
   margin-right: 1rem;
 }
+
+/* Language */
+.language h2 {
+  margin-bottom: 1.3rem;
+}
+
+.language .language__item {
+  border-bottom: 1px solid var(--color-border);
+  padding: 1.2rem 0;
+}
+
+.language .language__item:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.language__details p {
+  color: var(--color-gray-medium);
+}
