--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ h3 {
 .modal__details .modal__item i{
   color: var(--color-gray-medium);
   margin-right: 1.5rem;
-  font-size: 1.8rem;
+  font-size: 2.2rem;
 }
 
 .modal__details .modal__item a{
@@ -437,4 +437,47 @@ h3 {
 
 .language__details p {
   color: var(--color-gray-medium);
+}
+
+/* Project */
+.project h2 {
+  margin-bottom: 1.3rem;
+}
+
+.project .project__item {
+  border-bottom: 1px solid var(--color-border);
+  padding: 1.2rem 0;
+}
+
+.project .project__item:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.project__details .btn {
+  outline: 0;
+  padding: 0.5rem 1.8rem;
+  border-radius: 1.6rem;
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 0.5rem 0;
+  color: var(--color-gray-medium);
+  background-color: var(--color-white);
+  border: 1.5px solid var(--color-gray-medium);
+}
+
+.project__details .btn a{
+  text-decoration: none;
+  color: var(--color-gray-medium);
+}
+
+.project__details .btn:hover {
+  border-width: 2px;
+  background-color: rgba(234, 234, 234, 0.8);
+  margin: 0.45rem 0;
+}
+
+.project__details .btn a i{
+  margin-left: 0.6rem;
 }
