--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,8 @@ body {
   color: var(--color-black);
   font-size: 1.4rem;
   line-height: 1.6;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   background-color: var(--color-body);
 }
@@ -162,7 +163,8 @@ h3 {
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 1.6rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .intro__details .details__left .btn--connect {
@@ -219,7 +221,7 @@ h3 {
   z-index: 1;
 }
 
-.modalContainer.open{
+.modalContainer.open {
   display: flex;
 }
 
@@ -230,7 +232,7 @@ h3 {
   border-radius: var(--border-radius);
 }
 
-.modal .modal__header{
+.modal .modal__header {
   padding: 1rem 1.5rem;
   border-bottom: 1px solid var(--color-border);
   display: flex;
@@ -239,7 +241,7 @@ h3 {
   font-size: 2rem;
 }
 
-.modal__header .closeModal{
+.modal__header .closeModal {
   width: 30px;
   height: 30px;
   border-radius: 100%;
@@ -250,39 +252,39 @@ h3 {
   transition: background-color 0.3s ease;
 }
 
-.modal__header .closeModal:hover{
+.modal__header .closeModal:hover {
   cursor: pointer;
   background-color: #eee;
 }
 
-.modal .modal__details{
+.modal .modal__details {
   padding: 1rem 1.5rem;
 }
 
-.modal__details .modal__title{
+.modal__details .modal__title {
   font-size: 2rem;
   margin-bottom: 1.5rem;
 }
 
-.modal__details .modal__item{
+.modal__details .modal__item {
   display: flex;
   align-items: flex-start;
   margin-bottom: 1.5rem;
 }
 
-.modal__details .modal__item i{
+.modal__details .modal__item i {
   color: var(--color-gray-medium);
   margin-right: 1.5rem;
   font-size: 2.2rem;
 }
 
-.modal__details .modal__item a{
+.modal__details .modal__item a {
   text-decoration: none;
   color: var(--color-blue);
   font-weight: 600;
 }
 
-.modal__details .modal__item a:hover{
+.modal__details .modal__item a:hover {
   text-decoration: underline;
 }
 
@@ -392,18 +394,27 @@ h3 {
 }
 
 /* Skill */
+.card.skill {
+  padding: 0;
+}
+
 .skill h2 {
   margin-bottom: 1.2rem;
+  padding: 2.4rem 2.4rem 0;
+}
+
+.skill .skill__items {
+  padding: 0 2.4rem;
 }
 
 .skill .skill__item {
   border-bottom: 1px solid var(--color-border);
   padding: 1.2rem 0;
+  transition: all 0.4s ease-out;
 }
 
 .skill .skill__item:last-child {
   border-bottom: none;
-  padding-bottom: 0;
 }
 .skill__details p {
   margin: 1.2rem 0.5rem;
@@ -419,6 +430,40 @@ h3 {
   color: var(--color-gray-medium);
   font-size: 2rem;
   margin-right: 1rem;
+}
+
+.skill .skill__footer {
+  padding: 1.2rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.6rem;
+  color: var(--color-gray-medium);
+  border-top: 1px solid var(--color-border);
+  transition: all 0.3s ease-out;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+
+.skill .skill__footer:hover {
+  cursor: pointer;
+  background-color: #eee;
+}
+
+.skill .skill__footer .fa-chevron-down {
+  margin-left: 0.5rem;
+  transition: transform 0.4s ease-out;
+}
+
+.skill .skill__item.skill__hidden {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  border: 0;
+}
+
+.skill .skill__item.skill__shown {
+  opacity: 1;
+  max-height: 100vh;
 }
 
 /* Language */
@@ -466,11 +511,12 @@ h3 {
   color: var(--color-gray-medium);
   background-color: var(--color-white);
   border: 1.5px solid var(--color-gray-medium);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 600;
 }
 
-.project__details .btn a{
+.project__details .btn a {
   text-decoration: none;
   color: var(--color-gray-medium);
 }
@@ -481,12 +527,12 @@ h3 {
   margin: 0.45rem 0;
 }
 
-.project__details .btn a i{
+.project__details .btn a i {
   margin-left: 0.6rem;
 }
 
 /* Interest */
-.card.interest{
+.card.interest {
   padding: 0;
 }
 
@@ -495,12 +541,12 @@ h3 {
   padding: 2.4rem 2.4rem 0;
 }
 
-.interest .tab{
+.interest .tab {
   border-bottom: 1px solid var(--color-border);
   padding: 0 2rem;
 }
 
-.interest .tab .tabLink{
+.interest .tab .tabLink {
   margin-right: 2rem;
   padding: 1.5rem 0.4rem;
   border: none;
@@ -509,24 +555,25 @@ h3 {
   font-weight: 600;
   color: var(--color-gray-medium);
   cursor: pointer;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.4rem;
 }
 
-.interest .tab .tabLink.active{
+.interest .tab .tabLink.active {
   border-bottom: 2px solid #057642;
   color: #057642;
 }
 
-.interest .interest__items{
+.interest .interest__items {
   padding: 0 2.4rem 2.4rem;
 }
 
-.interest .interest__items .tabContent{
+.interest .interest__items .tabContent {
   display: none;
 }
 
-.interest .interest__items .tabContent.active{
+.interest .interest__items .tabContent.active {
   display: block;
 }
 
@@ -575,7 +622,8 @@ h3 {
   color: var(--color-gray-medium);
   background-color: var(--color-white);
   border: 1.5px solid var(--color-gray-medium);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
   font-weight: 600;
 }
@@ -586,6 +634,6 @@ h3 {
   margin: 0.45rem 0;
 }
 
-.interest__details .btn i{
+.interest__details .btn i {
   margin-right: 0.6rem;
 }
