add show more/less button in project section

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,18 +486,27 @@ h3 {
 }
 
 /* Project */
+.card.project{
+  padding: 0;
+}
+
 .project h2 {
   margin-bottom: 1.2rem;
+  padding: 2.4rem 2.4rem 0;
+}
+
+.project .project__items{
+  padding: 0 2.4rem;
 }
 
 .project .project__item {
   border-bottom: 1px solid var(--color-border);
   padding: 1.2rem 0;
+  transition: all 0.4s ease-out;
 }
 
 .project .project__item:last-child {
   border-bottom: none;
-  padding-bottom: 0;
 }
 
 .project__details .btn {
@@ -529,6 +538,40 @@ h3 {
 
 .project__details .btn a i {
   margin-left: 0.6rem;
+}
+
+.project .project__footer{
+  padding: 1.2rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.6rem;
+  color: var(--color-gray-medium);
+  border-top: 1px solid var(--color-border);
+  transition: all 0.3s ease-out;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+
+.project .project__footer:hover{
+  cursor: pointer;
+  background-color: #eee;
+}
+
+.project .project__footer .fa-chevron-down{
+  margin-left: 0.5rem;
+  transition: transform 0.4s ease-out;
+}
+
+.project .project__item.project__hidden{
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  border: 0;
+}
+
+.project .project__item.project__shown{
+  opacity: 1;
+  max-height: 100vh;
 }
 
 /* Interest */
